Email and password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="textEmail">Correo electrónico</string>
     <string name="textPass">Contraseña</string>
     <string name="btnResgist">Registrarme</string>
+    <string name="btnsignin">Iniciar sesión</string>
 </resources>
